--- a/css/filmstrip/_vertical_filmstrip.scss
+++ b/css/filmstrip/_vertical_filmstrip.scss
@@ -36,7 +36,12 @@
     position: fixed;
     top: 0;
     transition: height .3s ease-in;
-    right: 0;
+    //right: 0;
+
+    /* coded by italo */
+    left: 50%;
+    transform: translateX(-50%);
+
     z-index: $filmstripVideosZ;
 
     &.reduce-height {
