--- a/css/filmstrip/_vertical_filmstrip.scss
+++ b/css/filmstrip/_vertical_filmstrip.scss
@@ -88,7 +88,7 @@
         justify-content: flex-start;
 
         #filmstripLocalVideoThumbnail {
-            width: calc(100% - 15px);
+            width: calc(100% - 5px);
 
             .videocontainer {
                 height: 0px;
@@ -112,20 +112,20 @@
 
         display: flex;
         flex: 1;
-        flex-direction: column-reverse;
+        flex-direction: column;
         height: auto;
         overflow-x: hidden;
-        overflow-y: scroll;
+        overflow-y: auto;
 
         #filmstripRemoteVideosContainer {
             @include minHWAutoFix();
-            flex-direction: column-reverse;
+            flex-direction: column;
             overflow: visible;
-            width: calc(100% - 8px); // 8px for margin + border of the thumbnails
+            // width: calc(100% - 8px); // 8px for margin + border of the thumbnails
 
             .videocontainer {
                 height: 0px;
-                width: 100%;
+                // width: 100%;
             }
         }
     }
