--- a/css/filmstrip/_vertical_filmstrip.scss
+++ b/css/filmstrip/_vertical_filmstrip.scss
@@ -73,6 +73,7 @@
             padding-left: 0;
             transition: right 2s;
             width: 100%;
+            margin-top: 60px;
         }
     }
 
